fixed mobile spacing for category show page

--- a/app/assets/stylesheets/styles/base/responsive.scss
+++ b/app/assets/stylesheets/styles/base/responsive.scss
@@ -446,6 +446,10 @@
     width: 100% !important;
   }
 
+  #cat-panel {
+    margin-bottom: 33px;
+  }
+
   /* remove chaser in mobile */
   .chaser { display: none !important; }
 
